<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ua.kpi.comsys.iv7101.mobilefilms.ui.images.ImagesFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_images" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="ua.kpi.comsys.iv7101.mobilefilms.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_charts"
        android:name="ua.kpi.comsys.iv7101.mobilefilms.ui.charts.ChartsFragment"
        android:label="@string/title_charts"
        tools:layout="@layout/fragment_charts" />
</navigation>